# wax

./: .gitattributes  .gitignore  .ocamlformat-ignore  404.html  BLOG-STELE-INTERNALS.md  BLOG-STELE.md  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  PROJECT.md  README.md  RELEASING.md  ROADMAP.md  TODO.txt  cheatsheet.html  cli.html  dune-project  editor.html  examples.html  features.html  index.html  introduction.html  language.html  playground.html  print.html  searcher-09f2665d.js  searchindex-006ce041.js  searchindex-04ebd011.js  searchindex-052ca919.js  searchindex-07bf1630.js  searchindex-07e66972.js  searchindex-0b2b49b9.js  searchindex-0c478050.js  searchindex-0d0cc0ae.js  searchindex-0e2efc16.js  searchindex-0f895a09.js  searchindex-1019ba69.js  searchindex-11004f30.js  searchindex-1bc8aede.js  (+64 more)
docs/: book.toml  dune  gen_examples.ml  gen_keywords.ml  gen_llms.ml  llms.txt
docs/assets/: wax-copy.js  wax-highlight.css
docs/src/: SUMMARY.md  cheatsheet.md  cli.md  editor.md  examples.md  features.md  introduction.md  language.md  playground.md
docs/src/correspondence/: instructions.md  intro.md  module_fields.md  types.md
docs/tools/playground/: editor.mjs  package-lock.json  package.json  serve.sh  smoke.js
docs/tools/wax-highlight/: index.js  package-lock.json  package.json  wat.tmLanguage.json
scripts/: build_xid_table.ml  dune  generate_error_messages.ml  parse_messages.ml  parse_messages.mli  tune_on_error_reduce.sh
skills/wax/: SKILL.md  dune  reference.md
src/editor/: dune  wax_format_js.ml
src/lib-editor/: dune  editor_common.ml  editor_common.mli  wat_editor.ml  wat_editor.mli  wax_editor.ml  wax_editor.mli
src/lib-lsp/: dune  wax_lsp.ml  wax_lsp.mli
src/lib-utils/: ast.ml  ast.mli  colors.ml  colors.mli  debug.ml  debug.mli  diagnostic.ml  diagnostic.mli  dune  dwarf.ml  dwarf.mli  feature.ml  feature.mli  message.ml  message.mli  number_parsing.ml  number_parsing.mli  pager.ml  pager.mli  pager_node.js  pager_node.wat  pager_stubs.c  parsing.ml  parsing.mli  printer.ml  printer.mli  source_map.ml  source_map.mli  styled_printer.ml  styled_printer.mli  trivia.ml  trivia.mli  uint32.ml  uint64.ml  uint64.mli  unicode.ml  unicode.mli  v128.ml  warning.ml  warning.mli  (+2 more)
src/lib-wasm/: ast.ml  ast.mli  ast_utils.ml  ast_utils.mli  atomics.ml  atomics.mli  binary_to_text.ml  binary_to_text.mli  cond_explore.ml  cond_explore.mli  cond_solver.ml  cond_solver.mli  cond_specialize.ml  cond_specialize.mli  declare_refs.ml  declare_refs.mli  desugar.ml  desugar.mli  dune  dune.menhir  folding.ml  folding.mli  lexer.ml  lexer.mli  misc.ml  misc.mli  naming.ml  naming.mli  output.ml  output.mli  parser.automaton  parser.mly  parser_messages.census.expected  parser_messages.config  parser_messages.expected  parser_messages.overrides  parser_messages.stats.expected  parser_messages.verdicts  parsing.ml  parsing.mli  (+17 more)
stele/: README.md  TUTORIAL.md  dune  generate_error_messages.ml  parse_messages.ml  tune_on_error_reduce.sh
stele/examples/: wasm.verdicts  wax.verdicts
stele/runtime/: parser_error_runtime.ml  parser_error_runtime.mli
stele/test/: calc-rot.config  calc-rot.expected  calc.expected  calc.names.expected  calc.stats.expected  dune
stele/test/delim/: delim.config  delim.expected  dune  parser.mly
test/: dune  link_suite.custom-descriptors.expected  link_suite.expected  output.wat.expected  output.wax.expected  spectest.wat  wasm_test_suite.custom-descriptors.expected  wasm_test_suite.expected  wasm_tools_suite.custom-descriptors.expected  wasm_tools_suite.expected
test/check-sourcemap/: check_sourcemap.ml  dune
test/cram-tests/: dune
test/cram-tests/all-errors-semantic-raise.t/: module-else.wax  pagesize.wat  run.t  stmt-raise.wax
test/cram-tests/arg-type-mismatch.t/: catch_all_arity.wat  catch_type.wat  return_call_arity.wat  return_call_type.wat  run.t
test/cram-tests/array-len-bottom-ref.t/: run.t
test/cram-tests/array-len-on-none.t/: run.t
test/cram-tests/array-new-data-datacount.t/: no-datacount.wasm  run.t
test/cram-tests/array-new-fixed-large-count.t/: poly.wat  run.t  underflow.wat
test/cram-tests/array-op-receiver-cast.t/: run.t
test/cram-tests/bare-export.t/: bare.wax  dup.wax  run.t
test/cram-tests/become-non-function.t/: run.t
test/cram-tests/binary-bad-type-index.t/: bad.wasm  overlong-valtype.wasm  run.t
test/cram-tests/binary-unbound-index.t/: run.t
test/cram-tests/binop-flexible-number-operand.t/: run.t
test/cram-tests/block-binding-annotation.t/: cases.wat  run.t
test/diagnostics/: dune  test_diagnostic.expected  test_diagnostic.ml
test/editor-wat-features/: dune  test_editor_wat_features.expected  test_editor_wat_features.ml
test/editor-wat-recovery/: dune  test_editor_wat_recovery.expected  test_editor_wat_recovery.ml
test/editor-wax-features/: dune  test_editor_wax_features.expected  test_editor_wax_features.ml
test/keyword-consistency/: check_keywords.ml  dune
test/link-coherence/: atomics.wat  bulk.wat  check_coherence.ml  dune  simd.wat
test/method-consistency/: dune  test_method_consistency.expected  test_method_consistency.ml
test/name-resolution/: dune  test_name_resolution.expected  test_name_resolution.ml
test/pbt/: dune  test_source_map.ml
test/recovery/: dune  test_recover.expected  test_recover.ml
test/recovery-wat/: dune  test_recover_wat.expected  test_recover_wat.ml
test/subtype-lattice/: dune  test_subtype_lattice.ml
test/unicode/: dune  test_unicode.expected  test_unicode.ml
test/wasm-test-suite/: blacklist  link-blacklist
test/wasm-tools-suite/: README.md  bad-reftype.wast  blacklist
test/wasmoo/: dune.inc  gen_dune.ml
tree-sitter-wax/: .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json  tree-sitter.json
tree-sitter-wax/queries/: highlights.scm  indents.scm  locals.scm  textobjects.scm
tree-sitter-wax/scripts/: extract-doc-blocks.sh  smoke-parse.sh
tree-sitter-wax/src/: grammar.json  node-types.json  parser.c  scanner.c
tree-sitter-wax/test/: expected-errors.txt
(+1151 files in other folders)
