; The llms.txt generator (see gen_llms.ml and ADOPTION.md Phase 6). Not
; installed; run to (re)generate the flat single-file reference.

(executable
 (name gen_llms)
 (modules gen_llms))

; Assemble docs/src/*.md into docs/llms.txt. A promote-mode rule so
; `dune build docs/llms.txt` regenerates the committed file in the source tree;
; the doc pages are dependencies, so editing any of them makes it stale.

(rule
 (target llms.txt)
 (mode promote)
 (deps
  (glob_files src/*.md)
  (glob_files src/correspondence/*.md))
 (action
  (with-stdout-to
   llms.txt
   (run %{exe:gen_llms.exe} src))))
