; The llms.txt generator (see gen_llms.ml and ADOPTION.md Phase 6). Not
; installed; assembles the mdbook sources into the flat single-file reference.

(executable
 (name gen_llms)
 (modules gen_llms))

; Keep the committed docs/llms.txt in sync with the mdbook sources: regenerate
; it into llms.txt.gen and diff against the committed copy under `dune runtest`.
; After editing a doc page, `dune runtest` fails and `dune promote` updates
; docs/llms.txt (which the binary embed and the skill's reference.md copy from).

(rule
 (deps
  (glob_files src/*.md)
  (glob_files src/correspondence/*.md))
 (action
  (with-stdout-to
   llms.txt.gen
   (run %{exe:gen_llms.exe} src))))

(rule
 (alias runtest)
 (action
  (diff llms.txt llms.txt.gen)))
