(executable
 (name build_unicode_width_table)
 (modules build_unicode_width_table)
 (libraries uucp))

(executable
 (name build_xid_table)
 (modules build_xid_table)
 (libraries uucp))

(executable
 (name generate_error_messages)
 (modules generate_error_messages parse_messages)
 ; menhirSdk reads the .cmly for exact productions/nullability/aliases; str is
 ; still used by parse_messages.ml to parse the --list-errors comment blocks.
 (libraries menhirSdk str))
