(rule
 (enabled_if
  (>= %{ocaml_version} 5.0))
 (deps
  (glob_files_rec wasm-test-suite/*.wast)
  (glob_files wasm-test-suite/blacklist)
  (glob_files_rec additional-tests/*.wast))
 (action
  (with-stdout-to
   wasm_test_suite.output
   (run ../src/bin/run_wasm_testsuite.exe --no-color))))

(rule
 (enabled_if
  (>= %{ocaml_version} 5.0))
 (alias runtest)
 (action
  (diff wasm_test_suite.expected wasm_test_suite.output)))

; The same suite with the custom-descriptors proposal enabled: the standard
; tests also exercise the exact-reference / always-exact path, and the
; custom-descriptors tests validate (in the default run above they are rejected
; as feature-disabled, which checks the gate).

(rule
 (enabled_if
  (>= %{ocaml_version} 5.0))
 (deps
  (glob_files_rec wasm-test-suite/*.wast)
  (glob_files wasm-test-suite/blacklist)
  (glob_files_rec additional-tests/*.wast))
 (action
  (with-stdout-to
   wasm_test_suite.custom-descriptors.output
   (run
    ../src/bin/run_wasm_testsuite.exe
    --no-color
    --enable
    custom-descriptors))))

(rule
 (enabled_if
  (>= %{ocaml_version} 5.0))
 (alias runtest)
 (action
  (diff
   wasm_test_suite.custom-descriptors.expected
   wasm_test_suite.custom-descriptors.output)))

; The vendored wasm-tools corpus (test/wasm-tools-suite/): all of wasm-tools'
; tests/cli, with a blacklist for the tests wax cannot run (see the blacklist
; file). Its own golden, kept separate from the spec suite above.

(rule
 (enabled_if
  (>= %{ocaml_version} 5.0))
 (deps
  (glob_files_rec wasm-tools-suite/*.wast)
  (glob_files wasm-tools-suite/blacklist))
 (action
  (with-stdout-to
   wasm_tools_suite.output
   (run ../src/bin/run_wasm_testsuite.exe --no-color wasm-tools-suite))))

(rule
 (enabled_if
  (>= %{ocaml_version} 5.0))
 (alias runtest)
 (action
  (diff wasm_tools_suite.expected wasm_tools_suite.output)))

; The same corpus with custom-descriptors enabled, to exercise the vendored
; custom-descriptors tests (skipped as feature-disabled in the default run).

(rule
 (enabled_if
  (>= %{ocaml_version} 5.0))
 (deps
  (glob_files_rec wasm-tools-suite/*.wast)
  (glob_files wasm-tools-suite/blacklist))
 (action
  (with-stdout-to
   wasm_tools_suite.custom-descriptors.output
   (run
    ../src/bin/run_wasm_testsuite.exe
    --no-color
    --enable
    custom-descriptors
    wasm-tools-suite))))

(rule
 (enabled_if
  (>= %{ocaml_version} 5.0))
 (alias runtest)
 (action
  (diff
   wasm_tools_suite.custom-descriptors.expected
   wasm_tools_suite.custom-descriptors.output)))
