[package]
name = "tree-sitter-wax"
description = "Wax grammar for the tree-sitter parsing library"
version = "0.1.0"
license = "Apache-2.0"
homepage = "https://ocsigen.org/wax/"
repository = "https://github.com/ocsigen/wax"
keywords = ["incremental", "parsing", "tree-sitter", "wax", "webassembly"]
categories = ["parser-implementations", "parsing", "text-editors"]
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1"

[dev-dependencies]
tree-sitter = "0.25"
