(library
 (name wax_utils)
 (public_name wax-lib.utils)
 ; menhirLib and sedlex are needed by the generic parsing infrastructure
 ; (Parsing, and the copied-in Parser_error_runtime below): Parsing's Make
 ; functor drives a Menhir incremental engine over a Sedlexing lexbuf. No
 ; sedlex.ppx: Parsing takes the lexbuf as a functor input, it defines no lexer.
 (libraries unix yojson menhirLib sedlex)
 (foreign_stubs
  (language c)
  (names pager_stubs))
 (wasm_of_ocaml
  (javascript_files pager_node.js)
  (wasm_files pager_node.wat)))

; stele's runtime marker-resolution helper is vendored under vendor/stele/ (its
; own package). Rather than depend on the stele.runtime *library* — which would
; leak into wax-lib's installed metadata and force stele to be installed too — we
; copy its single module in and compile it as one of wax_utils's own modules, so
; the generic Parsing functor (which instantiates it) can live here too.
; vendor/stele/runtime/ stays the single source of truth.

(rule
 (copy
  %{project_root}/vendor/stele/runtime/parser_error_runtime.ml
  parser_error_runtime.ml))

(rule
 (copy
  %{project_root}/vendor/stele/runtime/parser_error_runtime.mli
  parser_error_runtime.mli))

; unicode_widths.ml is a committed, generated table (character display
; widths). Its generator, scripts/build_unicode_width_table.exe, depends on
; uucp — a dev-only dependency (:with-dev-setup). The regeneration rule is
; therefore isolated in a virtual subdirectory marked vendored below, which
; dune excludes from @all (and hence from @install/@runtest and the default
; build). A normal build uses the committed table and never requires uucp on
; any platform; regeneration happens only on demand, from a dev switch that
; has uucp, with:
;   dune build @src/lib-utils/regenerate-unicode-widths

(vendored_dirs unicode-widths-gen xid-gen)

(subdir
 unicode-widths-gen
 (rule
  (target unicode_widths.ml)
  ; (universe) so an explicit regeneration always reruns the generator,
  ; picking up a newer uucp (and thus Unicode version) even when nothing in
  ; the repository changed.
  (deps %{project_root}/scripts/build_unicode_width_table.exe (universe))
  (mode
   (promote
    (into ..)))
  (action
   (with-stdout-to
    unicode_widths.ml
    (run %{project_root}/scripts/build_unicode_width_table.exe)))))

(alias
 (name regenerate-unicode-widths)
 (deps unicode-widths-gen/unicode_widths.ml))

; xid.ml is a committed, generated table (Unicode XID_Start / XID_Continue
; ranges) with the same dev-only-uucp arrangement as unicode_widths above.
; Regenerate with: dune build @src/lib-utils/regenerate-xid

(subdir
 xid-gen
 (rule
  (target xid.ml)
  (deps %{project_root}/scripts/build_xid_table.exe (universe))
  (mode
   (promote
    (into ..)))
  (action
   (with-stdout-to
    xid.ml
    (run %{project_root}/scripts/build_xid_table.exe)))))

(alias
 (name regenerate-xid)
 (deps xid-gen/xid.ml))
