; The correctness lints (see [Warning]) fire during the validation these tests
; exercise, cluttering unrelated tests with incidental warnings. Hide the whole
; group by default here via [WAX_WARN]; the lint-specific tests re-enable what
; they check with an explicit [-W] (which overrides the environment) or by
; clearing [WAX_WARN].

(env
 (_
  (env-vars
   (WAX_WARN correctness=hidden))))

(cram
 ; These are end-to-end CLI tests (they run the wax binary and, in lsp.t /
 ; feature-attribute.t / source-map-mappings.t, python3 helpers), so they belong
 ; to the wax package: opam runs them under `wax` --with-test (binary + python3
 ; present) and not under `wax-lib` --with-test (where the binary is absent).
 (package wax)
 (deps
  %{bin:wax}
  %{dep:../check-sourcemap/check_sourcemap.exe}
  (glob_files_rec %{project_root}/docs/src/*.md)))
