(executable
 (name check_keywords)
 (libraries str))

; Every bare-word Wax keyword must appear in [ident_or_keyword] and in the
; [from_wasm] reserved-name set; this fails the build (naming the keyword) if a
; new one is added without updating both.

(rule
 (alias runtest)
 (deps
  check_keywords.exe
  %{project_root}/src/lib-wax/lexer.ml
  %{project_root}/src/lib-wax/parser.mly
  %{project_root}/src/lib-conversion/namespace.ml)
 (action
  (run
   ./check_keywords.exe
   %{project_root}/src/lib-wax/lexer.ml
   %{project_root}/src/lib-wax/parser.mly
   %{project_root}/src/lib-conversion/namespace.ml)))
